[package]
name = "warp_github_webhook"
version = "0.3.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
description = "GitHub webhook for Warp web framework"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/KonradBorowski/warp_github_webhook"
edition = "2018"

[dependencies]
bytes = "0.5.4"
github_webhook_message_validator = "0.1.2"
hex = "0.4.0"
serde = "1.0.104"
serde_json = "1.0.45"
warp = "0.2.0"

[dev-dependencies]
serde_derive = "1.0"
tokio = { version = "0.2", features = ["macros"] }
