[package]
name = "warp_github_webhook"
version = "0.3.1"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
description = "GitHub webhook for Warp web framework"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/KonradBorowski/warp_github_webhook"
edition = "2018"

[dependencies]
bytes = "0.5.4"
hex = "0.4.0"
hmac = "0.10.1"
serde = "1.0.104"
serde_json = "1.0.45"
sha2 = "0.9.2"
warp = { version = "0.2.0", default-features = false }

[dev-dependencies]
serde_derive = "1.0"
tokio = { version = "0.2", features = ["macros"] }
